--- a/Kwitter_page.html
+++ b/Kwitter_page.html
@@ -22,17 +22,15 @@
         <h1 class="header">
            VAMOS CONVERSAR ?</h1>
             <img src="logo.png" id="img">
-            <h3 id="user_name"class="text-white"></h3>
+            <div id="output"></div>
         <div class="container">
             <hr>
-            <label>add sala</label>      
-            <input type="tetx" id="roomName" class="form-control" placeholder="Nome da sala">
+            <label>add mensagem</label>      
+            <input type="tetx" id="mensagem" class="form-control" placeholder="escreva sua mensagem">
             <hr>    
-            <button class="btn btn-success" onclick="addRoom()">add sala</button>
-            <h3 class="text-white">salas criadas</h3>
-            <div id="output"></div>
+            <button class="btn btn-success" onclick="addMessage()">add mensagem</button>
         </div>
     </center>
-    <script src="Kwitter_room.js"></script>
+    <script src="Kwitter_page.js"></script>
 </body>
 </html>
