--- a/Kwitter_page.html
+++ b/Kwitter_page.html
@@ -22,13 +22,13 @@
         <h1 class="header">
            VAMOS CONVERSAR ?</h1>
             <img src="logo.png" id="img">
-            <div id="output"></div>
         <div class="container">
             <hr>
             <label>add mensagem</label>      
             <input type="tetx" id="mensagem" class="form-control" placeholder="escreva sua mensagem">
             <hr>    
             <button class="btn btn-success" onclick="addMessage()">add mensagem</button>
+            <div id="output" class="container"></div>
         </div>
     </center>
     <script src="Kwitter_page.js"></script>
